--- a/build.gradle
+++ b/build.gradle
@@ -25,8 +25,9 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('org.springframework.boot:spring-boot-starter-mustache')
-	compile('org.springframework.boot:spring-boot-starter-security')
+//	compile('org.springframework.boot:spring-boot-starter-security')
 	compile('org.springframework.boot:spring-boot-starter-web')
+    compile('com.fasterxml.jackson.datatype:jackson-datatype-jsr310')
 
 	// https://mvnrepository.com/artifact/com.opencsv/opencsv
 	compile ('com.opencsv:opencsv:3.9')
