--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/teeup
 #
 ## this tells Spring to generate database tables on startup.
 spring.jpa.generate-ddl=true
+
+
+spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS = false
