--- a/front-end/package.json
+++ b/front-end/package.json
@@ -15,5 +15,9 @@
     "gulp": "^3.9.1",
     "gulp-browser": "^3.0.4",
     "gulp-sass": "^3.1.0"
+  },
+  "devDependencies": {
+    "babel-preset-es2015": "^6.24.1",
+    "gulp-babel": "^6.1.2"
   }
 }
